# rasterizeddb

./: .gitignore  Cargo.toml  README.md  RELEASES.md  notes.txt
.cargo/: config.toml
.github/workflows/: release.yml
rastcp/: Cargo.toml  README.md
rastcp/examples/: file_transfer.rs
rastcp/src/: cert.rs  client.rs  common.rs  config.rs  error.rs  lib.rs  main.rs  server.rs
rastcp/tests/: advanced_tests.rs  integration_tests.rs  protocol_tests.rs
rasterizeddb_core/: Cargo.toml  README.md
rasterizeddb_core/.cargo/: config.toml
rasterizeddb_core/benches/: atomic_cache_benchmarks.rs  buffer_benchmarks.rs  file_sync_benchmarks.rs  query_benchmarks.rs  query_executor_benchmarks.rs  simd_copy_benchmarks.rs  string_instructions_benchmarks.rs
rasterizeddb_core/src/: client.rs  column_unsafe.rs  ext_cov_tests.rs  instructions.rs  lib.rs  main.rs  memory_pool.rs  pgwire.rs
rasterizeddb_core/src/cache/: atomic_cache.rs  atomic_cache_v2.rs  buffer_cache.rs  mod.rs
rasterizeddb_core/src/configuration/: mod.rs
rasterizeddb_core/src/core/: column.rs  database.rs  db_type.rs  file_handlers.rs  hashing.rs  helpers.rs  helpers_old.rs  mock_helpers.rs  mock_table.rs  mod.rs  row.rs  support_types.rs  table.rs  table_ext.rs  table_header.rs
rasterizeddb_core/src/core/database/: mod.rs
rasterizeddb_core/src/core/database_v2/: args.rs  mod.rs
rasterizeddb_core/src/core/helpers/: smallvec_extensions.rs
rasterizeddb_core/src/core/helpers2/: mod.rs  smallvec_extensions.rs
rasterizeddb_core/src/core/helpers_v2/: mod.rs  smallvec_extensions.rs
rasterizeddb_core/src/core/processor/: concurrent_processor.rs  mod.rs  transformer.rs
rasterizeddb_core/src/core/row/: common.rs  error.rs  logical.rs  math.rs  mod.rs  row.rs  row_pointer.rs  schema.rs  table.rs
rasterizeddb_core/src/core/row_v2/: common.rs  concurrent_processor.rs  error.rs  logical.rs  math.rs  mod.rs  query_parser.rs  query_tokenizer.rs  row.rs  row_pointer.rs  schema.rs  table.rs  token_processor.rs  tokenizer.rs  traits.rs  transformer.rs
rasterizeddb_core/src/core/rql/: executor.rs  lexer_ac.rs  lexer_ct.rs  lexer_dc.rs  lexer_dr.rs  lexer_dt.rs  lexer_ir.rs  lexer_query.rs  lexer_rc.rs  lexer_s1.rs  lexer_ur.rs
rasterizeddb_core/src/core/rql_v2/: executor.rs  lexer_ac.rs  lexer_ct.rs  lexer_dc.rs  lexer_dr.rs  lexer_dt.rs  lexer_ir.rs  lexer_query.rs  lexer_rc.rs  lexer_s1.rs  lexer_ur.rs  mod.rs
rasterizeddb_core/src/core/sme/: mod.rs  rule_store.rs  rules.rs  scanner.rs  scanner_test.rs  semantic_mapping_engine.rs  sme_avx.rs  sme_tests.rs  sms_tests.rs
rasterizeddb_core/src/core/sme_v2/: dirty_row_tracker.rs  in_memory_rules.rs  mod.rs  rule_store.rs  rules.rs  scanner.rs  semantic_mapping_engine.rs  sme_range_merger.rs  sme_range_processor.rs  sme_range_processor_common.rs  sme_range_processor_comp.rs  sme_range_processor_str.rs  sme_simd.rs  sme_v2_tests.rs
rasterizeddb_core/src/core/storage_providers/: backend.rs  file_async.rs  file_reader_driver.rs  file_sync.rs  helpers.rs  io_uring_reader.rs  memory.rs  mock_file_sync.rs  mod.rs  traits.rs
rasterizeddb_core/src/core/tokenizer/: mod.rs  query_parser.rs  query_tokenizer.rs
rasterizeddb_core/src/renderers/: html.rs  template.html
rasterizeddb_core/src/rql/: helpers.rs  mod.rs  models.rs  parser.rs  tokenizer.rs
rasterizeddb_core/src/simds/: endianess.rs  little_endian.rs  mod.rs
rasterizeddb_core/tests/: table_tests.rs
test_client/: Cargo.toml
test_client/src/: main.rs
test_db_web/: Cargo.toml
test_db_web/src/: main.rs
test_server/: Cargo.toml
test_server/src/: lib.rs  main.rs  message_status.rs
test_server/src/receiver/: mod.rs
test_server/src/sender/: mod.rs
