[package]
name = "rastcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
rustls = { version = "0.23.27" }
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"
thiserror = "2.0.12"
log = "0.4.27"
env_logger = "0.11.8"
futures-util = "0.3.31"
bytes = "1.10.1"
rcgen = { version = "0.13.2", default-features = false, features = ["aws_lc_rs", "pem"] }
time = "0.3.41"
socket2 = "0.5.9"
webpki-roots = { version = "1.0.0" }

[dev-dependencies]
serde_json = "1.0.140"
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
uuid = "1.16.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = "fat"