[package]
name = "rastcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
rustls = { version = "0.23.31" }
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"
thiserror = "2.0.14"
log = "0.4.27"
env_logger = "0.11.8"
futures-util = "0.3.31"
bytes = "1.10.1"
rcgen = { version = "0.14.3", default-features = false, features = ["aws_lc_rs", "pem"] }
time = "0.3.41"
socket2 = "0.6.0"
webpki-roots = { version = "1.0.2" }

[dev-dependencies]
serde_json = "1.0.142"
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
uuid = "1.18.0"