[package]
name = "rastcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
rustls = { version = "0.23" }
tokio-rustls = "0.26"
rustls-pemfile = "2.2.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
bytes = "1.10"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
time = "0.3"
socket2 = "0.6"
webpki-roots = { version = "1.0" }

[dev-dependencies]
serde_json = "1.0.143"
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
uuid = "1.18.1"