[package]
name = "rasterizeddb_core"
version = "0.1.5"
edition = "2024"
repository = "https://github.com/milen-denev/rasterizeddb"
license = "GPL-3.0-only"
keywords = ["database", "embedded-database"]
authors = ["Milen Denev"]
description = "A schemafull, high-performance database written in Rust, designed for speed and scalability."

[dependencies]
tokio = { version = "1", features = ["full"] }
byteorder = "1.5"
itertools = "0.14"
ahash = "0.8"
once_cell = "1.21.3"
orx-concurrent-vec = "3.7.0"
stopwatch = "0.0.7"
futures = "0.3"
async-lazy = { version = "0.1", features = ["parking_lot"] }
dashmap = "6.1"
log = "0.4"
libmimalloc-sys = "0.1"
rastcp = { path = "../rastcp" }
env_logger = "0.11"
tera = "1.20"
crc = "3.3"
temp_testdir = "0.2"
memmap2 = "0.9"
rand = "0.9.2"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
memory-stats = "1.2.0"
smallvec = { version = "1.15", features = ["union", "write"]}
arc-swap = "1.7"
fastrand = "2.3"
parking_lot = "0.12"

# unix dependencies
[target.'cfg(unix)'.dependencies]
io-uring = "0.7"

[dev-dependencies]
criterion = { version = "0.7" }
tempfile = "3.21"

[[bench]]
name = "buffer_benchmarks"
harness = false

[[bench]]
name = "string_instructions_benchmarks"
harness = false

[[bench]]
name = "query_benchmarks"
harness = false

[[bench]]
name = "query_executor_benchmarks"
harness = false

[[bench]]
name = "simd_copy_benchmarks"
harness = false

[[bench]]
name = "atomic_cache_benchmarks"
harness = false

[features]
default = []
enable_long_row = []
enable_data_verification = []

# [target.'cfg(target_arch = "x86_64")']
# rustflags = ["-C", "target-cpu=native", "-C", "target-feature=+avx2"]