[package]
name = "rasterizeddb_core"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/milen-denev/rasterizeddb"
license = "GPL-3.0-only"
keywords = ["database", "embedded-database"]
authors = ["Milen Denev"]
description = "A schemafull, high-performance database written in Rust, designed for speed and scalability."

[dependencies]
tokio = { version = "1", features = ["full"] }
byteorder = "1.5"
itertools = "0.14"
ahash = "0.8"
once_cell = "1.21.3"
orx-concurrent-vec = "3.10"
stopwatch = "0.0.7"
futures = "0.3"
async-lazy = { version = "0.1", features = ["parking_lot"] }
dashmap = "6.1"
log = "0.4"
libmimalloc-sys = "0.1"
rastcp = { path = "../rastcp" }
env_logger = "0.11"
crc = "3.4"
temp_testdir = "0.2"
memmap2 = "0.9"
rand = "0.9"
memory-stats = "1.2"
smallvec = { version = "1.15", features = ["union", "write"]}
arc-swap = "1.8"
fastrand = "2.3"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
kanal = "0.1"
rclite = "0.4.1"
opool = "0.2.0"
cacheguard = "0.1.0"
xutex = "0.2.1"

# pgwire TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.2"

# NOTE: Cargo does not support `cfg(debug_assertions)` for platform-specific dependencies.
# These are always available, but only used behind `#[cfg(debug_assertions)]` in code.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.8" }
tempfile = "3"

[[bench]]
name = "string_instructions_benchmarks"
harness = false

[[bench]]
name = "query_benchmarks"
harness = false

[[bench]]
name = "query_executor_benchmarks"
harness = false

[[bench]]
name = "simd_copy_benchmarks"
harness = false

[[bench]]
name = "atomic_cache_benchmarks"
harness = false

[[bench]]
name = "file_sync_benchmarks"
harness = false

[features]
default = ["memory_pool_reuse", "sme_v2"]
enable_long_row = []
enable_data_verification = []
memory_pool_reuse = []
sme_v2 = []