[package]
name = "test_client"
version = "0.1.0"
edition = "2024"

[dependencies]
rasterizeddb_core = { path = "../rasterizeddb_core" }
tokio = { version = "1", features = ["full"] }
stopwatch = "0.0.7"

[profile.release]
strip = "all"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = "fat"