[package]
name = "test_client"
version = "0.1.0"
edition = "2024"

[dependencies]
compio = { version = "0.16.0", features = ["macros"] }
rasterizeddb_core = { path = "../rasterizeddb_core" }
stopwatch = "0.0.7"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.2"
futures = "0.3.31"
async-lock = "3.4.1"