[package]
name = "test_db_web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
rasterizeddb_core = { path = "../rasterizeddb_core" }
tower = "0.5.2"
once_cell = "1.20.2"
async-lazy = { version = "0.1.0", features = ["parking_lot"] }
rand = "0.8.5"