[package]
name = "test_db_web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
rasterizeddb_core = { path = "../rasterizeddb_core" }
tower = "0.5.2"
once_cell = "1.20.3"
async-lazy = { version = "0.1.2", features = ["parking_lot"] }
rand = "0.9.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = "fat"