[package]
name = "test_db_web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
rasterizeddb_core = { path = "../rasterizeddb_core" }
tower = "0.5.2"
once_cell = "1.21.3"
async-lazy = { version = "0.1.2", features = ["parking_lot"] }
rand = "0.9.1"